--- a/data/health_dept_contact_info/01_merge_in_county_contacts.ipynb
+++ b/data/health_dept_contact_info/01_merge_in_county_contacts.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "3114it [00:11, 273.91it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "health_dept_names = []\n",
     "contact_numbers = []\n",
@@ -94,33 +102,6 @@
     "df = deepcopy(county_df)\n",
     "df[\"HealthDeptName\"] = health_dept_names\n",
     "df[\"HealthDeptContact\"] = contact_numbers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2020-03-28 09:43:22--  https://github.com/Yu-Group/covid-19-ventilator-demand-prediction/blob/4bd43c43d1068f0ccb9eb35725b4897ea408f147/scraping/countyFIPS_to_city.pkl\n",
-      "Resolving github.com (github.com)... 140.82.114.4\n",
-      "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: unspecified [text/html]\n",
-      "Saving to: ‘countyFIPS_to_city.pkl’\n",
-      "\n",
-      "countyFIPS_to_city.     [ <=>                ]  65.20K   425KB/s    in 0.2s    \n",
-      "\n",
-      "2020-03-28 09:43:22 (425 KB/s) - ‘countyFIPS_to_city.pkl’ saved [66764]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wget https://github.com/Yu-Group/covid-19-ventilator-demand-prediction/blob/4bd43c43d1068f0ccb9eb35725b4897ea408f147/scraping/countyFIPS_to_city.pkl"
    ]
   },
   {
@@ -161,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "matched 2334 nocontact 786 nofips 1081\n"
+      "matched 2334 nocontact 812 nofips 1081\n"
      ]
     }
    ],
@@ -179,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +205,7 @@
        "0      01001    AL    Autauga"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -291,88 +272,202 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CountyName</th>\n",
+       "      <th>id</th>\n",
+       "      <th>Header-FIPSStandCtyCode</th>\n",
+       "      <th>EntityofFile</th>\n",
+       "      <th>SecondaryEntityOfFile</th>\n",
+       "      <th>DateofFile</th>\n",
+       "      <th>DateofCreation</th>\n",
+       "      <th>FileLength</th>\n",
        "      <th>StateName</th>\n",
-       "      <th>countyFIPS</th>\n",
-       "      <th>HealthDeptName</th>\n",
-       "      <th>HealthDeptContact</th>\n",
+       "      <th>StateNameAbbreviation</th>\n",
+       "      <th>CountyName</th>\n",
+       "      <th>...</th>\n",
+       "      <th>#Deaths_3/21/20</th>\n",
+       "      <th>#Deaths_3/22/20</th>\n",
+       "      <th>#Deaths_3/23/20</th>\n",
+       "      <th>#Deaths_3/24/20</th>\n",
+       "      <th>#Deaths_3/25/20</th>\n",
+       "      <th>#Deaths_3/26/20</th>\n",
+       "      <th>deaths</th>\n",
+       "      <th>cases</th>\n",
        "      <th>tot_deaths</th>\n",
+       "      <th>tot_cases</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1831</th>\n",
-       "      <td>New York</td>\n",
-       "      <td>New York</td>\n",
+       "      <td></td>\n",
        "      <td>36061</td>\n",
-       "      <td>New York City Department of Health and Mental ...</td>\n",
-       "      <td>13473964131</td>\n",
+       "      <td>AHRF</td>\n",
+       "      <td>36061</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19212.0</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>...</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>280.0</td>\n",
        "      <td>365.0</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>365.0</td>\n",
+       "      <td>4478</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2941</th>\n",
-       "      <td>King</td>\n",
-       "      <td>Washington</td>\n",
+       "      <td></td>\n",
        "      <td>53033</td>\n",
-       "      <td>Public Health - Seattle and King County</td>\n",
-       "      <td>12062964600</td>\n",
+       "      <td>AHRF</td>\n",
+       "      <td>53033</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19212.0</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>King</td>\n",
+       "      <td>...</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>109.0</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>1828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1121</th>\n",
-       "      <td>Orleans</td>\n",
-       "      <td>Louisiana</td>\n",
+       "      <td></td>\n",
        "      <td>22071</td>\n",
-       "      <td>City of New Orleans Department of Health</td>\n",
-       "      <td>15046582500</td>\n",
+       "      <td>AHRF</td>\n",
+       "      <td>22071</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19212.0</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>Orleans</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>37.0</td>\n",
        "      <td>46.0</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1285</th>\n",
-       "      <td>Wayne</td>\n",
-       "      <td>Michigan</td>\n",
+       "      <td></td>\n",
        "      <td>26163</td>\n",
-       "      <td>Wayne County Health Department</td>\n",
-       "      <td>13132240810</td>\n",
+       "      <td>AHRF</td>\n",
+       "      <td>26163</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19212.0</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>Wayne</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>21.0</td>\n",
        "      <td>26.0</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1852</th>\n",
-       "      <td>Suffolk</td>\n",
-       "      <td>New York</td>\n",
+       "      <td></td>\n",
        "      <td>36103</td>\n",
-       "      <td>Suffolk County Department of Health Services</td>\n",
-       "      <td>16318540100</td>\n",
+       "      <td>AHRF</td>\n",
+       "      <td>36103</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19212.0</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Suffolk</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>22.0</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>3386</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 7319 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     CountyName   StateName  countyFIPS  \\\n",
-       "1831   New York    New York       36061   \n",
-       "2941       King  Washington       53033   \n",
-       "1121    Orleans   Louisiana       22071   \n",
-       "1285      Wayne    Michigan       26163   \n",
-       "1852    Suffolk    New York       36103   \n",
+       "     id Header-FIPSStandCtyCode EntityofFile SecondaryEntityOfFile DateofFile  \\\n",
+       "1831                      36061         AHRF                 36061       2019   \n",
+       "2941                      53033         AHRF                 53033       2019   \n",
+       "1121                      22071         AHRF                 22071       2019   \n",
+       "1285                      26163         AHRF                 26163       2019   \n",
+       "1852                      36103         AHRF                 36103       2019   \n",
        "\n",
-       "                                         HealthDeptName HealthDeptContact  \\\n",
-       "1831  New York City Department of Health and Mental ...       13473964131   \n",
-       "2941            Public Health - Seattle and King County       12062964600   \n",
-       "1121           City of New Orleans Department of Health       15046582500   \n",
-       "1285                     Wayne County Health Department       13132240810   \n",
-       "1852       Suffolk County Department of Health Services       16318540100   \n",
+       "      DateofCreation  FileLength   StateName StateNameAbbreviation CountyName  \\\n",
+       "1831         19212.0     31661.0    New York                    NY   New York   \n",
+       "2941         19212.0     31661.0  Washington                    WA       King   \n",
+       "1121         19212.0     31661.0   Louisiana                    LA    Orleans   \n",
+       "1285         19212.0     31661.0    Michigan                    MI      Wayne   \n",
+       "1852         19212.0     31661.0    New York                    NY    Suffolk   \n",
        "\n",
-       "      tot_deaths  \n",
-       "1831       365.0  \n",
-       "2941       109.0  \n",
-       "1121        46.0  \n",
-       "1285        26.0  \n",
-       "1852        22.0  "
+       "      ... #Deaths_3/21/20 #Deaths_3/22/20 #Deaths_3/23/20 #Deaths_3/24/20  \\\n",
+       "1831  ...            45.0            63.0           125.0           199.0   \n",
+       "2941  ...            74.0            75.0            87.0            94.0   \n",
+       "1121  ...            15.0            15.0            20.0            26.0   \n",
+       "1285  ...             4.0             5.0             8.0            13.0   \n",
+       "1852  ...             3.0             4.0             4.0            17.0   \n",
+       "\n",
+       "     #Deaths_3/25/20 #Deaths_3/26/20  \\\n",
+       "1831           280.0           365.0   \n",
+       "2941           100.0           109.0   \n",
+       "1121            37.0            46.0   \n",
+       "1285            21.0            26.0   \n",
+       "1852            20.0            22.0   \n",
+       "\n",
+       "                                                 deaths  \\\n",
+       "1831  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
+       "2941  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
+       "1121  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
+       "1285  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
+       "1852  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
+       "\n",
+       "                                                  cases tot_deaths tot_cases  \n",
+       "1831  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...      365.0      4478  \n",
+       "2941  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...      109.0      1828  \n",
+       "1121  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       46.0      1170  \n",
+       "1285  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       26.0      1810  \n",
+       "1852  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       22.0      3386  \n",
+       "\n",
+       "[5 rows x 7319 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
