export hospital contact info

--- a/data/contact_info/01_merge_in_county_contacts.ipynb
+++ b/data/contact_info/01_merge_in_county_contacts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -35,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '../..'\n",
-    "df_covid = load_usafacts_data.load_daily_data(dir_mod='../..')\n",
-    "with open(oj(data_dir, 'data/df_county_level_cached.pkl'), 'rb') as f:\n",
+    "data_dir = '../../data'\n",
+    "df_covid = load_usafacts_data.load_daily_data(dir_mod=data_dir)\n",
+    "with open(oj(data_dir, 'df_county_level_cached.pkl'), 'rb') as f:\n",
     "    county_df = pickle.load(f)\n",
     "# county_df = load_data.load_county_level(dir_mod='..')\n",
     "with open(\"countyFIPS_to_city.pkl\", 'rb') as f:\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3114it [00:11, 273.91it/s]\n"
+      "3114it [00:11, 281.58it/s]\n"
      ]
     }
    ],
