--- a/modeling/05_exponential_model.ipynb
+++ b/modeling/05_exponential_model.ipynb
@@ -66,25 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 286,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'load_data' has no attribute 'outcome_deaths'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-268-18496d6110d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_county_level\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir_mod\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'../'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0moutcome_deaths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'#Deaths_3/26/20'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mload_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutcome_deaths\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m#outcome_cases = load_data.outcome_cases # most recent day\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#outcome_deaths = load_data.outcome_deaths\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'load_data' has no attribute 'outcome_deaths'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = load_data.load_county_level(dir_mod = '../')\n",
-    "outcome_deaths = '#Deaths_3/26/20'\n",
-    "df = df.sort_values(load_data.outcome_deaths, ascending=False)\n",
+    "df = load_data.load_county_level(data_dir = '../data/')\n",
+    "outcome_deaths = '#Deaths_3/26/2020'\n",
+    "df = df.sort_values(outcome_deaths, ascending=False)\n",
     "#outcome_cases = load_data.outcome_cases # most recent day\n",
     "#outcome_deaths = load_data.outcome_deaths\n",
     "important_vars = load_data.important_keys(df)"
@@ -92,36 +80,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = exponential_modeling.estimate_deaths(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "908     [438.00256028123505]\n",
-       "1425    [126.69135036605057]\n",
-       "554     [47.638387516174426]\n",
-       "925     [23.701248308856158]\n",
-       "124     [22.972122323948984]\n",
-       "                ...         \n",
-       "539                      [0]\n",
-       "538                      [0]\n",
-       "535                      [0]\n",
-       "534                      [0]\n",
-       "1502                     [0]\n",
-       "Name: predicted_deaths_exponential, Length: 1503, dtype: object"
+       "Index(['id', 'Header-FIPSStandCtyCode', 'EntityofFile',\n",
+       "       'SecondaryEntityOfFile', 'DateofFile', 'DateofCreation', 'FileLength',\n",
+       "       'StateName', 'StateNameAbbreviation', 'CountyName',\n",
+       "       ...\n",
+       "       '#Deaths_3/22/2020', '#Deaths_3/23/2020', '#Deaths_3/24/2020',\n",
+       "       '#Deaths_3/25/2020', '#Deaths_3/26/2020', '#Deaths_3/27/2020', 'deaths',\n",
+       "       'cases', 'tot_deaths', 'tot_cases'],\n",
+       "      dtype='object', length=7318)"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = exponential_modeling.estimate_deaths(df, mode='predict_future')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "         0,   0,   0,   0,   0,   0,   0,   0,  21,  40,  60,  92, 124,\n",
+       "       149])"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['deaths'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1841    [231.98702647965587]\n",
+       "2941    [141.89562378110494]\n",
+       "1824    [155.85977461115073]\n",
+       "1803     [151.5894789479785]\n",
+       "1831      [124.153507351064]\n",
+       "                ...         \n",
+       "1107                     [0]\n",
+       "1108                     [0]\n",
+       "1110                     [0]\n",
+       "1112                     [0]\n",
+       "3113                     [0]\n",
+       "Name: predicted_deaths_exponential, Length: 3114, dtype: object"
+      ]
+     },
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,39 +376,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = fit_and_predict.get_forecasts(df,\n",
-    "                                  outcome='deaths',\n",
-    "                                  method='exponential',\n",
-    "                                  output_key='predicted_deaths_exponential')"
+    "                                   outcome='deaths',\n",
+    "                                   method='exponential',\n",
+    "                                   output_key='predicted_deaths_exponential')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "908     [438.00256028123505]\n",
-       "1425    [126.69135036605057]\n",
-       "554     [47.638387516174426]\n",
-       "925     [23.701248308856158]\n",
-       "124     [22.972122323948984]\n",
+       "1841    [231.98702647965587]\n",
+       "2941    [141.89562378110494]\n",
+       "1824    [155.85977461115073]\n",
+       "1803     [151.5894789479785]\n",
+       "1831      [124.153507351064]\n",
        "                ...         \n",
-       "539                      [0]\n",
-       "538                      [0]\n",
-       "535                      [0]\n",
-       "534                      [0]\n",
-       "1502                     [0]\n",
-       "Name: predicted_deaths_exponential, Length: 1503, dtype: object"
+       "1089                     [0]\n",
+       "1090                     [0]\n",
+       "1091                     [0]\n",
+       "1093                     [0]\n",
+       "3113                     [0]\n",
+       "Name: predicted_deaths_exponential, Length: 3114, dtype: object"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,33 +431,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "908      [371.9680830820316]\n",
-       "1425    [127.65290201358455]\n",
-       "554     [45.951547383231016]\n",
-       "925      [24.72246139183316]\n",
-       "124     [21.043517940651277]\n",
+       "1841    [183.66281137176944]\n",
+       "2941    [121.15066520087018]\n",
+       "1824    [128.22577560917534]\n",
+       "1803     [126.1731924583264]\n",
+       "1831     [92.56914875895471]\n",
        "                ...         \n",
-       "539     [1.0258802741679378]\n",
-       "538     [1.0258802741679378]\n",
-       "535     [1.0258802741679378]\n",
-       "534     [1.0258802741679378]\n",
-       "1502    [1.0258802741679378]\n",
-       "Name: predicted_deaths_shared_exponential, Length: 1503, dtype: object"
+       "1089    [1.5334533377634438]\n",
+       "1090    [1.4850011621837735]\n",
+       "1091    [1.3929366510199908]\n",
+       "1093    [1.3292871712101182]\n",
+       "3113    [1.6962723881941255]\n",
+       "Name: predicted_deaths_shared_exponential, Length: 3114, dtype: object"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['predicted_deaths_shared_exponential']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "y and y_preds have different shapes",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-295-f7a8e0c5527e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpmdl_weight\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mweights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpmdl_weight\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_pmdl_weight\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethods\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'shared_exponential'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'exponential'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutcome\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'deaths'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/covid-19-geographic-risk-prediction/modeling/pmdl_weight.py\u001b[0m in \u001b[0;36mcompute_pmdl_weight\u001b[0;34m(df, methods, outcome)\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m         \u001b[0my_preds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_preds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m         \u001b[0mweights\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpmdl_weight\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_preds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/covid-19-geographic-risk-prediction/modeling/pmdl_weight.py\u001b[0m in \u001b[0;36mpmdl_weight\u001b[0;34m(y, y_preds)\u001b[0m\n\u001b[1;32m     27\u001b[0m     \"\"\"\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0my_preds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'y and y_preds have different shapes'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: y and y_preds have different shapes"
+     ]
+    }
+   ],
+   "source": [
+    "import pmdl_weight\n",
+    "weights = pmdl_weight.compute_pmdl_weight(df, methods=['shared_exponential', 'exponential'], outcome='deaths')"
    ]
   },
   {
