--- a/data/contact_info/02_hospital_contact_info.ipynb
+++ b/data/contact_info/02_hospital_contact_info.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -24,7 +33,8 @@
     "import exponential_modeling\n",
     "\n",
     "outcomes = ['tot_cases', 'tot_deaths']\n",
-    "df_hospital = load_data.load_hospital_level(data_dir='../../data_hospital_level')\n",
+    "df_hospital = load_data.load_hospital_level(data_dir='../../data_hospital_level', \n",
+    "                                            merged_hospital_level_info='processed/10_hospital_level_info_merged_with_callnotes.csv',)\n",
     "df_county = load_data.load_county_level('../../data')\n",
     "df_county = df_county.sort_values('tot_deaths', ascending=False)\n",
     "df = df_hospital.merge(df_county, how='left', on='countyFIPS')\n",
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,54 +59,10 @@
     "# filter hospitals\n",
     "df = df[~df['countyFIPS'].isna() & df['ICU Beds'] > 0] # & df['IsAcademicHospital'] & df['ICU Beds'] > 0]\n",
     "df = df.sort_values(by=['Tot Deaths', 'ICU Beds', 'Total Employees'], ascending=False)\n",
-    "d_contact = df[['Hospital Name', 'County', 'City', 'Website',  'Phone Number', 'CMS Certification Number', 'countyFIPS']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'CMS Certification Number', 'Hospital Name',\n",
-       "       'Street Address_x', 'City_x', 'State_x', 'ZIP', 'System Affiliation',\n",
-       "       'Type of Facility', 'Total Employees',\n",
-       "       ...\n",
-       "       '#Deaths_3/21/20', '#Deaths_3/22/20', '#Deaths_3/23/20',\n",
-       "       '#Deaths_3/24/20', '#Deaths_3/25/20', '#Deaths_3/26/20', 'deaths',\n",
-       "       'cases', 'Tot Deaths', 'Tot Cases'],\n",
-       "      dtype='object', length=7505)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2917, 7505)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
+    "d_contact = df[['Hospital Name', 'County', 'City', 'Website',  \n",
+    "                'Phone Number', 'CMS Certification Number', 'countyFIPS',\n",
+    "                'Donation Phone Number', 'Donation Email', \n",
+    "                'Type (donation)', 'Notes']].fillna('').replace('NaN', '')"
    ]
   },
   {
@@ -117,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
